<resources>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="app_name">MensaMeet</string>
    <string name="title_home">Home</string>
    <string name="title_back">Zurück</string>
    <string name="title_next">Weiter</string>
    <string name="title_activity_home">Willkommen bei MensaMeet!</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_administer_groups">AdministerGroupsActivity</string>
    <string name="title_activity_administer_users">AdministerUsersActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username_file_id">Username</string>
    <string name="password_file_id">Password</string>
    <string name="invalid_username_message">Ungültiger Benutzername</string>
    <string name="invalid_password_message">Ungültiges Passwort</string>
    <string name="passwords_not_equal_message">Passwörter stimmen nicht überein</string>
    <string name="username_not_found_message">Keinen Benutzernamen gefunden</string>
    <string name="motto_not_found_message">Kein Motto gefunden</string>
    <string name="groupName">Gruppenname</string>
    <string name="time">Zeit</string>
    <string name="lineChoice">Linienauswahl</string>
    <string name="motto">Motto</string>
    <string name="maxMember">Maximale Gruppengröße:</string>
    <string name="create">erstellen</string>
    <string name="number">Anzahl</string>
    <string name="save">Speichern</string>
    <string name="selectedTime">gewählte Zeit:</string>
    <string name="showTime">gewählte Zeit</string>
    <string name="selectLine">Wähle eine Linie</string>
    <string name="groups">Gruppen:</string>
    <string name="chooseTime">Wähle eine Zeit</string>
    <string name="register">Registrieren</string>
    <string name="between">zwischen</string>
    <string name="and">und</string>
    <string name="join_group">Beitreten</string>
    <string name="start_before_end">Die Startzeit muss vor der Endzeit liegen!</string>
    <string name="test_list_classes_only_for_test_purposes">Test List classes (only for test purposes)</string>
    <string name="field_name">Name</string>
    <string name="field_motto">Motto</string>
    <string name="field_line">Linie</string>
    <string name="field_time">Zeit</string>
    <string name="field_max_members">Maximale Mitgliederanzahl</string>
    <string name="field_member_list">Mitglieder</string>
    <string name="error_saving_group">Fehler beim Speichern der Gruppe</string>
    <string name="group_data_locally_saved">Gruppendaten lokal gespeichert</string>
    <string name="group_saved">Gruppe gespeichert</string>
    <string name="user_saved">Benutzerdaten gespeichert</string>
    <string name="error_saving_user">Fehler beim Speichern der Benutzerdaten</string>
    <string name="user_data_changes_discarded">Änderungen der Benutzerdaten verworfen</string>
    <string name="field_birth_date">Geburtsdatum</string>
    <string name="set_birth_date">Gib dein Geburtsdatum an</string>
    <string name="field_gender">Geschlecht</string>
    <string name="gender_male">männlich</string>
    <string name="gender_female">weiblich</string>
    <string name="gender_other">divers</string>
    <string name="status_meat">alles</string>
    <string name="status_vegetarian">vegetarisch</string>
    <string name="status_vegan">vegan</string>
    <string name="status_pescetarian">pescetarisch</string>
    <string name="subject_it">Informatik</string>
    <string name="subject_economy">Wirtschaftswissenschaften</string>
    <string name="subject_math">Mathematik</string>
    <string name="subject_physics">Physik</string>
    <string name="subject_chemistry">Chemie</string>
    <string name="subject_biolgy">Biologie</string>
    <string name="subject_linguistic">Sprachwissenschaften</string>
    <string name="field_status">Status</string>
    <string name="field_subject">Fachrichtung</string>
    <string name="login_button_title">Login</string>
    <string name="register_button_title">Registrieren</string>
    <string name="edit_groups_button_title">Bearbeite Gruppen</string>
    <string name="edit_users_button_title">Bearbeite Benutzer</string>
    <string name="go_eat_button_title">Essen gehen</string>
    <string name="your_profile_button_title">Dein Profil</string>
    <string name="logout_button_title">Abmelden</string>
    <string name="email_title">E-Mail Adresse</string>
    <string name="password_title">Passwort</string>
    <string name="confirm_password_title">Passwort bestätigen</string>
    <string name="selectALine">Wähle eine oder mehrere Linie(n) aus!</string>
    <string name="your_gender">Dein Geschlecht</string>
    <string name="you_eat">Du isst</string>
    <string name="your_subject">Deine Fachrichtung</string>
    <string name="field_meals">Mahlzeiten</string>
    <string name="title_select_lines">Wähle deine Mensalinie(n)</string>
    <string name="title_set_time">Wann möchtest du essen gehen?</string>
    <string name="title_select_group">Deine Gruppenvorschläge</string>
    <string name="title_create_group">Lege eine neue Gruppe an</string>
    <string name="title_user_profile">Dein Benutzerprofil</string>
    <string name="change_picture_by_click">Klicke auf das Profilbild, um es zu verändern!</string>
    <string name="discard">Verwerfen</string>
    <string name="members">Mitglieder</string>
    <string name="delete_group">Gruppe löschen</string>
    <string name="delete_user">Benutzer löschen</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="title_group_joined">Glückwunsch! Du isst mit</string>
    <string name="title_general_user_profile">Details zum Benutzer</string>
    <string name="create_button_description">Mit dem Button rechts kannst du auch eine eigene Gruppe anlegen!</string>
    <string name="status_other">Nicht aufgeführter Status</string>
    <string name="status_student">Schüler*in</string>
    <string name="status_apprentice">Auszubildende*r</string>
    <string name="status_college_student">Student*in</string>
    <string name="status_professor">Professor*in</string>
    <string name="you_are">Dein Status</string>
    <string name="line_one">Linie 1</string>
    <string name="line_two">Linie 2</string>
    <string name="line_three">Linie 3</string>
    <string name="line_four_five">Linie 4/5</string>
    <string name="line_cutlet_bar">Schnitzelbar</string>
    <string name="line_six">Linie 6</string>
    <string name="line_late_line">Spätausgabe</string>
    <string name="line_curry_line">Koeriwerk</string>
    <string name="line_cafeteria">Cafeteria</string>
    <string name="line_cafetaria_late">Abendmensa</string>
    <string name="line_pizza_line">Pizzawerk</string>
    <string name="line_pizza_line_pasta">Pastawerk</string>
    <string name="line_salad">Pizzawerk Salat</string>
    <string name="group_deleted">Gruppe wurde gelöscht</string>
    <string name="user_deleted">Benutzer gelöscht.</string>
    <string name="no_group_joined">Du bist keiner Gruppe beigetreten</string>
    <string name="no_field_empty">Kein Feld darf leer bleiben</string>
    <string name="login_succeeded">Login erfolgreich</string>
    <string name="login_failed">Login fehlgeschlagen</string>
    <string name="registration_succeeded">Registrierung erfolgreich</string>
    <string name="registration_failed">Registrierung fehlgeschlagen</string>
    <string name="exception_mapper_io">IO-Exception beim ObjectMapper</string>
    <string name="error_loading_group">Fehler beim Laden der Gruppe</string>
    <string name="reloading_user_failed">Fehler beim Laden des Benutzers</string>
    <string name="group_deletion_failed">Löschen der Gruppe fehlgeschlagen</string>
    <string name="group_join_failed">Beitreten der Gruppe fehlgeschlagen</string>
    <string name="error_leaving_group">Fehler beim Verlassen der Gruppe</string>
    <string name="initialization_failed">Initialisierung fehlgeschlagen</string>
    <string name="credentials_incomplete">Zugangsdaten unvollständig</string>
    <string name="loading_groups_failed">Laden der Gruppen fehlgeschlagen</string>
    <string name="user_deletion_failed">Löschen des Benutzers fehlgeschlagen</string>
    <string name="really_leave_group">Willst du wirklich die Gruppe verlassen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="delete_created_group_by_leaving">Du kannst eine erstellte Gruppe wieder löschen, indem du sie verlässt, vorausgesetzt, niemand anderes ist ihr inzwischen beigetreten</string>
    <string name="really_delete_user">Willst du den Benutzer wirklich löschen?</string>
    <string name="really_delete_group">Willst du die Gruppe wirklich löschen?</string>
    <string name="user_deleted_server_not_firebase">Der Benutzer wurde auf dem Server, aber nicht bei Firebase gelöscht</string>
    <string name="slogan">Weil alleine essen doof ist.</string>
    <string name="error_loading_group_so_user_updated">Fehler beim Laden der Gruppe, daher Benutzer aktualisiert</string>
    <string name="no_time_chosen">Keine Zeit ausgewählt</string>
    <string name="no_lines_chosen">Keine Linien ausgewählt</string>
    <string name="group_saved_but_error_joining">Die Gruppe wurde erstellt, aber das Beitreten scheiterte</string>
    <string name="list_recyclerview">RecyclerView-Liste</string>
    <string name="account_created_but_initialization_failed">Benutzerkonto erstellt, Initialisierung jedoch fehlgeschlagen, bitte nochmals anmelden</string>
    <string name="subject_applied_geosciences">Angewandte Geowissenschaften</string>
    <string name="subject_architecture">Architektur</string>
    <string name="subject_bioengineering">Bioingenieurwesen</string>
    <string name="subject_building_restoration">Altbauinstandsetzung</string>
    <string name="subject_chemical_and_process_engineering">Chemieingenieurwesen und Verfahrenstechnik</string>
    <string name="subject_chemical_biology">Chemische Biologie</string>
    <string name="subject_civil_engineering">Bauingenieurwesen</string>
    <string name="subject_economathematics">Wirtschaftsmathematik</string>
    <string name="subject_economics_engineering">Wirtschaftsingenieurwesen</string>
    <string name="subject_electrical_engineering_and_information_technology">Elektro- und Informationstechnik</string>
    <string name="subject_energy_engineering_and_management">Energy Engineering and Management</string>
    <string name="subject_engineering_pedagogics">Ingenieurpädagogik</string>
    <string name="subject_european_culture_and_history_of_ideas">Europäische Kultur und Ideengeschichte</string>
    <string name="subject_financial_engineering">Financial Engineering</string>
    <string name="subject_food_chemistry">Lebensmittelchemie</string>
    <string name="subject_geodesy_and_geoinformatics">Geodäsie und Geoinformatik</string>
    <string name="subject_geoecology">Geoökologie</string>
    <string name="subject_geography">Geographie</string>
    <string name="subject_geophysics">Geophysik</string>
    <string name="subject_german_literature">Germanistik</string>
    <string name="subject_history_of_art">Kunstgeschichte</string>
    <string name="subject_information_systems_engineering_and_management">Information Systems Engineering and Management</string>
    <string name="subject_management_of_product_development">Management of Product Development</string>
    <string name="materials_science_and_engineering">Materialwissenschaft und Werkstofftechnik</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="subject_mechatronics_and_information_technology">Mechatronik und Informationstechnik</string>
    <string name="subject_meteorology">Meteorologie</string>
    <string name="subject_mobility_and_infrastructure">Mobilität und Infrastruktur</string>
    <string name="subject_mobility_systems_engineering_and_management">Mobility Systems Engineering and Management</string>
    <string name="subject_naturalsciences_and_technologie">Naturwissenschaft und Technik</string>
    <string name="subject_optics_and_photonics">Optics and Photonics</string>
    <string name="subject_pedagogics">Pädagogik</string>
    <string name="subject_philosophy_ethics">Philosophie/Ethik</string>
    <string name="subject_production_and_operations_management">Production and Operations Management</string>
    <string name="subject_regional_sciences">Regionalwissenschaft</string>
    <string name="subject_remote_sensing_and_geoinformatics">Remote Sensing and Geoinformatics</string>
    <string name="subject_science__media__communication">Wissenschaft-Medien-Kommunikation</string>
    <string name="subject_sports">Sport</string>
    <string name="subject_techno_mathematics">Technomathematik</string>
    <string name="subject_water_science_and_engineering">Water Science and Engineering</string>
    <string name="meeting_point">Treffpunkt ist immer am Ende der Schlange.</string>
    <string name="delete">Löschen</string>
    <string name="not_chosen">nicht ausgewählt</string>
    <string name="name_and_status_required">Name und Status sind obligatorisch</string>
    <string name="group_will_be_deleted">Die Gruppe wird danach gelöscht</string>
</resources>
